feat: PoC reading variables from CSS, planning CSS theme JS controls

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,7 @@
       voluptas sunt odio provident, impedit magnam exercitationem! Voluptate
       animi odit similique!
     </p>
+
+    <script src="./cssThemeToggler.js"></script>
   </body>
 </html>
