--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
       animi odit similique!
     </p>
 
+    <button id="themeToggle">Toggle Theme</button>
+
     <script src="./cssThemeToggler.js"></script>
   </body>
 </html>
